Rattrapage loop hero gilbert

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -3,6 +3,8 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Game/Map/Map_NatureMorte.Map_NatureMorte
 EditorStartupMap=/Game/Game/Map/Map_NatureMorte.Map_NatureMorte
+GlobalDefaultGameMode=/Game/Game/Blueprint/BP_CustomGameMode.BP_CustomGameMode_C
+GameInstanceClass=/Game/Game/Blueprint/BP_LoopGameInstance.BP_LoopGameInstance_C
 
 [/Script/Engine.RendererSettings]
 r.Mobile.ShadingPath=0
